# neural-network

./: CMakeLists.txt  README.md
Common/: device_picker.hpp  err_code.h  wtime.c
data/: mock_data.csv  sinus_training.data
model/: mnist.model  sinus.model
src/: ActivationFunction.cpp  ActivationFunction.h  CMakeLists.txt  CostFunction.cpp  CostFunction.h  GPU.cpp  GPU.h  Layer.cpp  Layer.h  Matrix.cpp  Matrix.h  Matrix.hpp  MatrixCPU.cpp  MatrixCPU.h  MatrixGPU.cpp  MatrixGPU.h  MatrixPar.cpp  MatrixPar.h  Metric.cpp  Metric.h  NeuralNetwork.cpp  NeuralNetwork.h  NeuralNetwork.hpp  Optimizer.cpp  Optimizer.h  ProgressBar.cpp  ProgressBar.h  Utils.cpp  Utils.h  Vector.cpp  Vector.h  VectorGPU.cpp  VectorGPU.h  kernels.cl  main.cpp  mainGPU.cpp  mainMNIST.cpp  mainSinus.cpp  matmul.cl
